--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -6,13 +6,13 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">WILD SERIES</a>
+            <a class="navbar-brand" href="{{ path('app_index') }}">WILD SERIES</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="{{ path('wild_index') }}">List</a>
                 </li>
 
             </ul>
